--- a/styles/contato.css
+++ b/styles/contato.css
@@ -31,7 +31,7 @@
 .contato__email::placeholder{
     font-family: var(--fonte-principal);
     color: var(--azul);
-    background: url(/img/email.svg) no-repeat;
+    background: url(img/email.svg) no-repeat;
     padding-left: 2em;
 }
 
